# bashrun2

./: .gitignore  AUTHORS  ChangeLog  Makefile.am  Makefile.in  README  acinclude.m4  configure  configure.ac  install.sh  rc.example  uninstall.sh
doc/: bashrun.1
etc/: Makefile.am  Makefile.in  bashrun.rc  bashrun2.rc
etc/bash_completion.d/: bashrun  bashrun2
etc/plugins/: dropdown.rc  terminal.rc
man/: Makefile.am  Makefile.in  bashrun.1  bashrun2.1
misc/: bash_completion
src/: Makefile.am  Makefile.in  actions  bashrc  bashrun  bashrun-remote  bashrun2  bindings  bookmarks  bootstrap  brwctl.c  brwctl.h  command  completion  config  core  defaultrc  defaults  engine  frontend  geometry  globals  handlers  instance  interface  message  modes  object  objects  plugin  progress  readline  registry  remote  rules  signals  simple  source  templates  terminals  (+5 more)
src/plugins/: dropdown.rc  terminal.rc
