SUBDIRS = src man etc
EXTRA_DIST = etc/bashrun.rc \
etc/plugins/dropdown.rc	\
etc/plugins/terminal.rc \
etc/bash_completion.d/bashrun \
man/bashrun.1 \
src/actions \
src/bashrc \
src/bashrun \
src/bindings \
src/bookmarks \
src/bootstrap \
src/command \
src/completion \
src/config \
src/core \
src/engine \
src/frontend \
src/geometry \
src/globals \
src/handlers \
src/message \
src/modes \
src/object \
src/objects \
src/plugin \
src/progress \
src/readline \
src/registry \
src/remote \
src/rules \
src/terminals \
src/utils \
src/window \
src/xdotool
