SUBDIRS = src etc man
EXTRA_DIST = etc/bashrun2.rc \
etc/plugins/terminal.rc \
etc/bash_completion.d/bashrun2 \
man/bashrun2.1 \
src/actions \
src/bashrc \
src/bashrun2 \
src/bindings \
src/brwctl.h \
src/bookmarks \
src/bootstrap \
src/command \
src/completion \
src/config \
src/core \
src/engine \
src/frontend \
src/globals \
src/handlers \
src/interface \
src/message \
src/modes \
src/object \
src/objects \
src/plugin \
src/progress \
src/readline \
src/registry \
src/remote \
src/rules \
src/templates \
src/terminals \
src/utils \
src/window \
src/xdgbase
